# oneil

./: .env.example  .gitignore  README.md  pyproject.toml
config/: costs.yaml  rules_v3-3.yaml
data_example/: README.md  generate.py  kosdaq.csv  kospi.csv  meta.csv
data_example/prices/: 000660.csv  005930.csv  035720.csv
docs/: PROGRESS.md  backtest_plan.md  backtest_plan_prompt.md  data_fetch_plan.md  oneil_strategy.md  oneil_strategy_v4_draft.md  strategy_enhancement_plan.md  strategy_revision_policy.md
docs/us/: u0_decisions.md  u1_data.md  u2_rules.md  u3_code.md  u4_baseline.md  u5_robustness.md  u6_verdict.md  us_plan.md
forward/: sessions.csv  signals.csv  status.md
plan/: p0_baseline.md  p1_gates.md  p2_stage.md  p3_handle.md  p4_reentry.md  p5_walkforward.md  p6_2001_stress.md  p7_adversarial.md  p8_followup.md  q13_capital.md  q14_rs_rank.md
plan/us/: u0_decisions.md
scripts/: check_krx_auth.py  daily.bat  daily.ps1  fetch.bat  fetch.ps1  forward_ledger.py  market_filter_stress.py  screen_today.py  walkforward_report.py
src/oneil_bt/: __init__.py
src/oneil_fetch/: __init__.py  __main__.py  cli.py  env_loader.py  incremental.py  krx_client.py  meta_builder.py  state.py  transform.py  universe.py  writer.py
state/: holdings.example.csv
tests/fixtures/: synthetic.py
tests/integration/: conftest.py  test_diagnostics.py  test_golden.py  test_smoke.py  test_sweep.py
tests/unit/: test_activation_report.py  test_analysis.py  test_base.py  test_base_quality.py  test_calendar.py  test_capture.py  test_capture_report.py  test_config.py  (+16 more)
(+66 files in other folders)
